enable verbose logging

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -92,6 +92,9 @@ export RANLIB = "${TARGET_SYS}-ranlib"
 # Bitbake config
 ##################################################################
 
+BB_LOGFMT = "log/{task}.log"
+BB_VERBOSE_LOGS = "True"
+
 BB_SIGNATURE_HANDLER = "basichash"
 BB_HASHBASE_WHITELIST += "DL_DIR FILE_DIRNAME FILESPATH FILE HOME PATH PWD SHELL SSTATE TERM TMUX USER"
 
