--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -40,16 +40,16 @@ FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
 DL_DIR ?= "${TOPDIR}/bbDownload"
 BB_TOP ?= "${TOPDIR}"
-BB_DIR ?= "${BB_TOP}/bbWork/${TARGET_ARCH}"
+BB_DIR ?= "${BB_TOP}/bbProgress/${TARGET_ARCH}"
 SSTATE ?= "${TOPDIR}/bbState/${TARGET_ARCH}"
 DEPLOY ?= "${TOPDIR}/deploy/${TARGET_ARCH}"
 
-CACHE   = "${BB_DIR}/cache"
-STAMP   = "${BB_DIR}/stamps/${PF}"
-COMMON  = "${BB_DIR}/common"
-STAGE   = "${BB_DIR}/stage"
-REPO    = "${BB_DIR}/repo"
-SHARED  = "${BB_DIR}/shared"
+CACHE  = "${BB_DIR}/cache"
+STAMP  = "${BB_DIR}/stamps/${PF}"
+COMMON = "${BB_DIR}/common"
+SHARE  = "${BB_DIR}/share"
+REPO   = "${BB_DIR}/repo"
+STAGE  = "${BB_DIR}/stage"
 
 WORKDIR = "${BB_DIR}/work/${PF}"
 SYSBASE = "${WORKDIR}/sysbase"
@@ -57,10 +57,10 @@ SRCBASE = "${WORKDIR}/srcbase"
 SRCDIR  = "${SRCBASE}/${P}-${PV}"
 SRCBASE = "${WORKDIR}/srcbase"
 
-FILES_TARGET  = "${WORKDIR}/target"
-FILES_INSTALL = "${FILES_TARGET}/install"
-FILES_SHARED  = "${FILES_TARGET}/shared"
-FILES_DEPLOY  = "${FILES_TARGET}/deploy"
+FILES_TARGET = "${WORKDIR}/target"
+FILES_SETUP  = "${FILES_TARGET}/setup"
+FILES_SHARE  = "${FILES_TARGET}/share"
+FILES_DEPLOY = "${FILES_TARGET}/deploy"
 
 W = "${WORKDIR}"
 T = "${W}/temp"
@@ -81,6 +81,8 @@ export XROOT = "${XPATH}/${TARGET_SYS}/sysroot"
 
 PATH_prepend = "${XPATH}/bin:"
 export PATH
+
+export PKG_CONFIG_PATH = "${XROOT}/lib/pkgconfig:${XROOT}/usr/lib/pkgconfig"
 
 export CC = "${TARGET_SYS}-gcc"
 export CXX = "${TARGET_SYS}-g++"
