--- a/meta/recipes-core/crosstool-ng/crosstool-ng_aarch64.config
+++ b/meta/recipes-core/crosstool-ng/crosstool-ng_aarch64.config
@@ -32,7 +32,7 @@ CT_MODULES=y
 #
 # Paths
 #
-CT_LOCAL_TARBALLS_DIR="${TARBALLS_DIR}"
+CT_LOCAL_TARBALLS_DIR="${CT_DL_DIR}"
 CT_SAVE_TARBALLS=y
 CT_WORK_DIR="${CT_TOP_DIR}"
 CT_BUILD_TOP_DIR="${CT_WORK_DIR:-${CT_TOP_DIR}/.build}/${CT_HOST:+HOST-${CT_HOST}/}${CT_TARGET}"
