--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -69,26 +69,26 @@ T = "${W}/temp"
 # Build environment
 ##################################################################
 
-export LC_ALL = "C"
+export SDK_PREFIX  = "/sdk_${TARGET_ARCH}"
+export SDK_SYSROOT = "${SDK_PREFIX}/${TARGET_SYS}/sysroot"
+
+PATH_prepend = "${SDK_PREFIX}/bin:"
+export PATH
+
+export PKG_CONFIG_PATH = "${SDK_SYSROOT}/lib/pkgconfig:${SDK_SYSROOT}/usr/lib/pkgconfig"
 
 CC_BUILD = "${BUILD_SYS}-gcc"
 CXX_BUILD = "${BUILD_SYS}-g++"
 AR_BUILD = "${BUILD_SYS}-gcc-ar"
 RANLIB_BUILD = "${BUILD_SYS}-gcc-ranlib"
 
-export XPATH = "/xtools-${TARGET_ARCH}"
-export XROOT = "${XPATH}/${TARGET_SYS}/sysroot"
-
-PATH_prepend = "${XPATH}/bin:"
-export PATH
-
-export PKG_CONFIG_PATH = "${XROOT}/lib/pkgconfig:${XROOT}/usr/lib/pkgconfig"
-
 export CC = "${TARGET_SYS}-gcc"
 export CXX = "${TARGET_SYS}-g++"
 export AR = "${TARGET_SYS}-ar"
 export AS = "${TARGET_SYS}-as"
 export RANLIB = "${TARGET_SYS}-ranlib"
+
+export LC_ALL = "C"
 
 ##################################################################
 # Bitbake config
