--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -39,10 +39,11 @@ PV_SRC = "${@d.getVar('SRCREV')[:6]}"
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
 DL_DIR ?= "${TOPDIR}/bbDownload"
-BB_TOP ?= "${TOPDIR}"
-BB_DIR ?= "${BB_TOP}/bbProgress/${TARGET_ARCH}"
+PCACHE ?= "${DL_DIR}/pkgcache"
 SSTATE ?= "${TOPDIR}/bbState/${TARGET_ARCH}"
 DEPLOY ?= "${TOPDIR}/deploy/${TARGET_ARCH}"
+BB_TOP ?= "${TOPDIR}"
+BB_DIR ?= "${BB_TOP}/bbProgress/${TARGET_ARCH}"
 
 CACHE  = "${BB_DIR}/cache"
 STAMP  = "${BB_DIR}/stamps/${PF}"
@@ -98,6 +99,6 @@ BB_LOGFMT = "log/{task}.log"
 BB_VERBOSE_LOGS = "True"
 
 BB_SIGNATURE_HANDLER = "basichash"
-BB_HASHBASE_WHITELIST += "DL_DIR FILE_DIRNAME FILESPATH FILE HOME PATH PWD SHELL SSTATE TERM TMUX USER"
+BB_HASHBASE_WHITELIST += "DL_DIR FILE_DIRNAME FILESPATH FILE HOME PATH PCACHE PWD SHELL SSTATE TERM TMUX USER"
 
 BB_NUMBER_THREADS ?= "${@bb.utils.cpu_count()}"
