--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -95,6 +95,9 @@ export LC_ALL = "C"
 # Bitbake config
 ##################################################################
 
+BBINCLUDELOGS = "True"
+BBINCLUDELOGS_LINES = "80"
+
 BB_LOGFMT = "log/{task}.log"
 BB_VERBOSE_LOGS = "True"
 
