rename working dirs

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -38,21 +38,25 @@ PV_SRC = "${@d.getVar('SRCREV')[:6]}"
 
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
-DL_DIR ?= "${TOPDIR}/bbDownload"
-PCACHE ?= "${DL_DIR}/pkgcache"
-SSTATE ?= "${TOPDIR}/bbState/${TARGET_ARCH}"
-DEPLOY ?= "${TOPDIR}/deploy/${TARGET_ARCH}"
-BB_TOP ?= "${TOPDIR}"
-BB_DIR ?= "${BB_TOP}/bbProgress/${TARGET_ARCH}"
+DL_DIR  ?= "${TOPDIR}/pacDownload"
+PCACHE  ?= "${DL_DIR}/pkgcache"
+SSTATE  ?= "${TOPDIR}/pacState"
+DEPLOY  ?= "${TOPDIR}/pacDeploy"
+PACBAKE ?= "${TOPDIR}/pacBake"
 
-CACHE  = "${BB_DIR}/cache"
-STAMP  = "${BB_DIR}/stamps/${PF}"
-COMMON = "${BB_DIR}/common"
-SHARE  = "${BB_DIR}/share"
-REPO   = "${BB_DIR}/repo"
-STAGE  = "${BB_DIR}/stage"
+SSTATE  .= "/${TARGET_SYS}"
+DEPLOY  .= "/${TARGET_SYS}"
+PACBAKE .= "/${TARGET_SYS}"
 
-WORKDIR = "${BB_DIR}/work/${PF}"
+CACHE = "${PACBAKE}/cache"
+STAMP = "${PACBAKE}/stamps/${PF}"
+
+LOCAL = "${PACBAKE}/local"
+SHARE = "${PACBAKE}/share"
+REPO  = "${PACBAKE}/repo"
+STAGE = "${PACBAKE}/stage"
+
+WORKDIR = "${PACBAKE}/work/${PF}"
 SYSBASE = "${WORKDIR}/sysbase"
 SRCBASE = "${WORKDIR}/srcbase"
 SRCDIR  = "${SRCBASE}/${P}-${PV}"
