change pkgcache dir var

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -38,8 +38,7 @@ PV_SRC = "${@d.getVar('SRCREV')[:6]}"
 
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
-DL_DIR  ?= "${TOPDIR}/pacDownload"
-PCACHE  ?= "${DL_DIR}/pkgcache"
+DL_DIR  ?= "${TOPDIR}/pacDownloads"
 SSTATE  ?= "${TOPDIR}/pacState"
 DEPLOY  ?= "${TOPDIR}/pacDeploy"
 PACBAKE ?= "${TOPDIR}/pacBake"
@@ -106,6 +105,6 @@ BB_LOGFMT = "log/{task}.log"
 BB_VERBOSE_LOGS = "True"
 
 BB_SIGNATURE_HANDLER = "basichash"
-BB_HASHBASE_WHITELIST += "DL_DIR FILE_DIRNAME FILESPATH FILE HOME PATH PCACHE PWD SHELL SSTATE TERM TMUX USER"
+BB_HASHBASE_WHITELIST += "DL_DIR FILE_DIRNAME FILESPATH FILE HOME PATH PKGCACHE PWD SHELL SSTATE TERM TMUX USER"
 
 BB_NUMBER_THREADS ?= "${@bb.utils.cpu_count()}"
