provide target-alias

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -3,19 +3,20 @@
 ##################################################################
 
 BUILD_ARCH := "${@os.uname()[4]}"
-BUILD_OS := "linux-gnu"
 BUILD_VENDOR = "pc"
+BUILD_OS = "linux-gnu"
 BUILD_SYS = "${BUILD_ARCH}-${BUILD_VENDOR}-${BUILD_OS}"
 
 HOST_ARCH = "${BUILD_ARCH}"
-HOST_OS = "${BUILD_OS}"
 HOST_VENDOR ="${BUILD_VENDOR}"
+HOST_OS = "${BUILD_OS}"
 HOST_SYS = "${BUILD_SYS}"
 
-TARGET_ARCH = "aarch64"
-TARGET_OS = "linux-gnu"
-TARGET_VENDOR = "rpi"
-TARGET_SYS = "${TARGET_ARCH}-${TARGET_VENDOR}-${TARGET_OS}"
+TARGET_ARCH ?= "aarch64"
+TARGET_VENDOR ?= "rpi3"
+TARGET_OS ?= "linux-gnu"
+TARGET_SYS ?= "${TARGET_ARCH}-${TARGET_VENDOR}-${TARGET_OS}"
+TARGET_ALIAS ?= "${TARGET_ARCH}-${TARGET_VENDOR}"
 
 include conf/local.conf
 
@@ -43,9 +44,9 @@ SSTATE  ?= "${TOPDIR}/pacState"
 DEPLOY  ?= "${TOPDIR}/pacDeploy"
 PACBAKE ?= "${TOPDIR}/pacBake"
 
-SSTATE  .= "/${TARGET_SYS}"
-DEPLOY  .= "/${TARGET_SYS}"
-PACBAKE .= "/${TARGET_SYS}"
+SSTATE  .= "/${TARGET_ALIAS}"
+DEPLOY  .= "/${TARGET_ALIAS}"
+PACBAKE .= "/${TARGET_ALIAS}"
 
 CACHE = "${PACBAKE}/cache"
 STAMP = "${PACBAKE}/stamps/${PF}"
@@ -73,7 +74,7 @@ T = "${W}/temp"
 # Build environment
 ##################################################################
 
-export SDK_PREFIX  = "/sdk_${TARGET_ARCH}"
+export SDK_PREFIX  = "/sdk_${TARGET_ALIAS}"
 export SDK_SYSROOT = "${SDK_PREFIX}/${TARGET_SYS}/sysroot"
 
 PATH_prepend = "${SDK_PREFIX}/bin:"
