--- a/meta/recipes-core/crosstool-ng/crosstool-ng_aarch64-rpi3.config
+++ b/meta/recipes-core/crosstool-ng/crosstool-ng_aarch64-rpi3.config
@@ -182,7 +182,7 @@ CT_TOOLCHAIN_BUGURL=""
 #
 # Tuple completion and aliasing
 #
-CT_TARGET_VENDOR="rpi"
+CT_TARGET_VENDOR="rpi3"
 CT_TARGET_ALIAS_SED_EXPR=""
 CT_TARGET_ALIAS=""
 
