format and tidy

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -12,11 +12,12 @@ HOST_VENDOR ="${BUILD_VENDOR}"
 HOST_OS = "${BUILD_OS}"
 HOST_SYS = "${BUILD_SYS}"
 
-TARGET_ARCH ?= "aarch64"
-TARGET_VENDOR ?= "rpi3"
-TARGET_OS ?= "linux-gnu"
-TARGET_SYS ?= "${TARGET_ARCH}-${TARGET_VENDOR}-${TARGET_OS}"
-TARGET_ALIAS ?= "${TARGET_ARCH}-${TARGET_VENDOR}"
+TARGET_ARCH = "aarch64"
+TARGET_VENDOR = "rpi3"
+TARGET_OS = "linux-gnu"
+TARGET_SYS = "${TARGET_ARCH}-${TARGET_VENDOR}-${TARGET_OS}"
+
+TARGET_ALIAS := "${TARGET_ARCH}-${TARGET_VENDOR}"
 
 include conf/local.conf
 
@@ -39,14 +40,16 @@ PV_SRC = "${@d.getVar('SRCREV')[:6]}"
 
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
-DL_DIR  ?= "${TOPDIR}/pacDownloads"
-SSTATE  ?= "${TOPDIR}/pacState"
-DEPLOY  ?= "${TOPDIR}/pacDeploy"
-PACBAKE ?= "${TOPDIR}/pacBake"
+PACROOT ?= "${TOPDIR}"
+PACBAKE  = "${PACROOT}/pacBake/${TARGET_ALIAS}"
 
-SSTATE  .= "/${TARGET_ALIAS}"
-DEPLOY  .= "/${TARGET_ALIAS}"
-PACBAKE .= "/${TARGET_ALIAS}"
+DL_DIR_TOP ?= "${PACROOT}"
+SSTATE_TOP ?= "${PACROOT}"
+DEPLOY_TOP ?= "${PACROOT}"
+
+DL_DIR = "${DL_DIR_TOP}/pacDownloads"
+SSTATE = "${SSTATE_TOP}/pacState/${TARGET_ALIAS}"
+DEPLOY = "${DEPLOY_TOP}/pacDeploy/${TARGET_ALIAS}"
 
 CACHE = "${PACBAKE}/cache"
 STAMP = "${PACBAKE}/stamps/${PF}"
@@ -60,7 +63,6 @@ WORKDIR = "${PACBAKE}/work/${PF}"
 SYSBASE = "${WORKDIR}/sysbase"
 SRCBASE = "${WORKDIR}/srcbase"
 SRCDIR  = "${SRCBASE}/${P}-${PV}"
-SRCBASE = "${WORKDIR}/srcbase"
 
 FILES_TARGET = "${WORKDIR}/target"
 FILES_SETUP  = "${FILES_TARGET}/setup"
