--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -41,14 +41,14 @@ PV_SRC = "${@d.getVar('SRCREV')[:6]}"
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
 PACROOT ?= "${TOPDIR}"
-PACBAKE  = "${PACROOT}/pacBake/${TARGET_ALIAS}"
+PACBAKE  = "${PACROOT}/pacBake"
 
 DL_DIR_TOP ?= "${PACROOT}"
 SSTATE_TOP ?= "${PACROOT}"
 DEPLOY_TOP ?= "${PACROOT}"
 
 DL_DIR = "${DL_DIR_TOP}/pacDownloads"
-SSTATE = "${SSTATE_TOP}/pacState/${TARGET_ALIAS}"
+SSTATE = "${SSTATE_TOP}/pacState"
 DEPLOY = "${DEPLOY_TOP}/pacDeploy/${TARGET_ALIAS}"
 
 CACHE = "${PACBAKE}/cache"
