tune build system

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -25,14 +25,16 @@ include conf/local.conf
 # Package default variables
 ##################################################################
 
-P  = "${@bb.parse.BBHandler.vars_from_file(d.getVar('FILE', False),d)[0]}"
 PN = "${@bb.parse.BBHandler.vars_from_file(d.getVar('FILE', False),d)[0]}"
 PV = "${@bb.parse.BBHandler.vars_from_file(d.getVar('FILE', False),d)[1] or '1.0'}"
 PR = "${@bb.parse.BBHandler.vars_from_file(d.getVar('FILE', False),d)[2] or '0'}"
 PF = "${PN}-${PV}-${PR}"
 
+P  = "${@bb.parse.BBHandler.vars_from_file(d.getVar('FILE', False),d)[0]}"
+S  = "${P}-${PV}"
+
 SRC_URI = ""
-PV_SRC = "${@d.getVar('SRCREV')[:6]}"
+PV_REV  = "${@d.getVar('SRCREV')[:6]}"
 
 ##################################################################
 # General directories for the build system
@@ -41,33 +43,31 @@ PV_SRC = "${@d.getVar('SRCREV')[:6]}"
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
 PACROOT ?= "${TOPDIR}"
-PACBAKE  = "${PACROOT}/pacBake"
+PACBASE  = "${PACROOT}/pacbase"
 
 DL_DIR_TOP ?= "${PACROOT}"
 SSTATE_TOP ?= "${PACROOT}"
 DEPLOY_TOP ?= "${PACROOT}"
 
-DL_DIR = "${DL_DIR_TOP}/pacDownloads"
-SSTATE = "${SSTATE_TOP}/pacState"
-DEPLOY = "${DEPLOY_TOP}/pacDeploy/${TARGET_ALIAS}"
+DL_DIR = "${DL_DIR_TOP}/pacstore"
+SSTATE = "${SSTATE_TOP}/pacstate"
+DEPLOY = "${DEPLOY_TOP}/pacdeploy/${TARGET_ALIAS}"
 
-CACHE = "${PACBAKE}/cache"
-STAMP = "${PACBAKE}/stamps/${PF}"
+CACHE = "${PACBASE}/cache"
+STAMP = "${PACBASE}/stamps/${PF}"
+STAGE = "${PACBASE}/stage"
+REPO  = "${PACBASE}/repo"
 
-LOCAL = "${PACBAKE}/local"
-SHARE = "${PACBAKE}/share"
-REPO  = "${PACBAKE}/repo"
-STAGE = "${PACBAKE}/stage"
+COMMON  = "${PACBASE}/work/common"
+WORKDIR = "${PACBASE}/work/${PF}"
+DEVROOT = "${WORKDIR}/devroot"
+SRCDIR  = "${WORKDIR}/srcdir"
+TARGET  = "${WORKDIR}/target"
 
-WORKDIR = "${PACBAKE}/work/${PF}"
-SYSBASE = "${WORKDIR}/sysbase"
-SRCBASE = "${WORKDIR}/srcbase"
-SRCDIR  = "${SRCBASE}/${P}-${PV}"
-
-FILES_TARGET = "${WORKDIR}/target"
-FILES_SETUP  = "${FILES_TARGET}/setup"
-FILES_SHARE  = "${FILES_TARGET}/share"
-FILES_DEPLOY = "${FILES_TARGET}/deploy"
+FILES_DEVEL  = "${TARGET}/devel"
+FILES_SHARE  = "${TARGET}/share"
+FILES_PKG    = "${TARGET}/pkg"
+FILES_DEPLOY = "${TARGET}/deploy"
 
 W = "${WORKDIR}"
 T = "${W}/temp"
@@ -76,8 +76,9 @@ T = "${W}/temp"
 # Build environment
 ##################################################################
 
-export SDK_PREFIX  = "/sdk_${TARGET_ALIAS}"
-export SDK_SYSROOT = "${SDK_PREFIX}/${TARGET_SYS}/sysroot"
+SDK_PREFIX  = "/sdk_${TARGET_ALIAS}"
+SDK_SYSROOT = "${SDK_PREFIX}/${TARGET_SYS}/sysroot"
+SDK_SHARED  = "${SDK_PREFIX}/shared"
 
 PATH_prepend = "${SDK_PREFIX}/bin:"
 export PATH
