--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -62,15 +62,13 @@ COMMON  = "${PACBASE}/work/common"
 WORKDIR = "${PACBASE}/work/${PF}"
 DEVROOT = "${WORKDIR}/devroot"
 SRCDIR  = "${WORKDIR}/srcdir"
+RESULT  = "${WORKDIR}/result/${BB_CURRENTTASK}"
 TARGET  = "${WORKDIR}/target"
 
 FILES_DEVEL  = "${TARGET}/devel"
 FILES_SHARE  = "${TARGET}/share"
 FILES_PKG    = "${TARGET}/pkg"
 FILES_DEPLOY = "${TARGET}/deploy"
-
-W = "${WORKDIR}"
-T = "${W}/temp"
 
 ##################################################################
 # Build environment
