--- a/meta/recipes-core/linux/linux-rpi.config
+++ b/meta/recipes-core/linux/linux-rpi.config
@@ -544,7 +544,8 @@ CONFIG_NET=y
 #
 CONFIG_PACKET=y
 # CONFIG_PACKET_DIAG is not set
-# CONFIG_UNIX is not set
+CONFIG_UNIX=y
+# CONFIG_UNIX_DIAG is not set
 # CONFIG_XFRM_USER is not set
 # CONFIG_NET_KEY is not set
 CONFIG_INET=y
