change to musl libc

--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -14,7 +14,7 @@ HOST_SYS = "${BUILD_SYS}"
 
 TARGET_ARCH = "aarch64"
 TARGET_VENDOR = "rpi3"
-TARGET_OS = "linux-gnu"
+TARGET_OS = "linux-musl"
 TARGET_SYS = "${TARGET_ARCH}-${TARGET_VENDOR}-${TARGET_OS}"
 
 TARGET_ALIAS := "${TARGET_ARCH}-${TARGET_VENDOR}"
