--- a/meta/conf/bitbake.conf
+++ b/meta/conf/bitbake.conf
@@ -43,7 +43,7 @@ PV_REV  = "${@d.getVar('SRCREV')[:6]}"
 FILE_DIRNAME = "${@os.path.dirname(d.getVar('FILE', False))}"
 
 PACROOT ?= "${TOPDIR}"
-PACBASE  = "${PACROOT}/pacbase"
+PACBASE ?= "${PACROOT}/pacbase"
 
 DL_DIR_TOP ?= "${PACROOT}"
 SSTATE_TOP ?= "${PACROOT}"
@@ -65,7 +65,7 @@ SRCDIR  = "${WORKDIR}/srcdir"
 RESULT  = "${WORKDIR}/result/${BB_CURRENTTASK}"
 TARGET  = "${WORKDIR}/target"
 
-FILES_DEVEL  = "${TARGET}/devel"
+FILES_DEV    = "${TARGET}/dev"
 FILES_SHARE  = "${TARGET}/share"
 FILES_PKG    = "${TARGET}/pkg"
 FILES_DEPLOY = "${TARGET}/deploy"
